# welding_robot

./: .gitignore  README.md
dm_controller/: CMakeLists.txt  package.xml
dm_controller/include/dm_controller/: controller.h
dm_controller/include/robot_model/: robot_updater.h
dm_controller/include/utils/: dyros_math.h
dm_controller/prc/: __init__.py  controller.py
dm_controller/src/: controller.cpp
dm_controller/src/robot_model/: robot_updater.cpp
dm_controller/src/utils/: bindings.cpp  dyros_math.cpp
dm_msgs/: CMakeLists.txt  package.xml
dm_msgs/srv/: GetSiteOrientation.srv  GetSitePosition.srv  JointMove.srv  TaskMove.srv
dm_ros/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml  setup.cfg  setup.py
dm_ros/dm_ros/: fr3_free.py  fr3_test.py  welding_free.py  welding_free2.py
dm_ros/dm_ros/utils/: collision_avoidance.py  image_publisher.py  multi_thread.py  scene_monitor.py
dm_ros/robots/: fr3_w_hand.xml  franka_hand.xml  two_box.xml  two_box_base.xml  two_box_full.xml  welding_scene.xml  welding_scene2.xml
dm_ros/robots/common/: assets.xml  scene.xml  sensor.xml  table.xml
dm_ros/robots/common/mesh/: basket.txt  hole.txt
dm_ros/robots/fr3/: actuator.xml  assets.xml  fr3.xml  fr3_hand.urdf  fr3_hand_torch_urdf.xml  fr3_hand_urdf.xml  fr3_urdf.xml
dm_ros/robots/franka_hand/: actuator.xml  assets.xml  franka_hand_urdf.xml
dm_ros/robots/two_box/: assets.xml  two_box_urdf.xml
dm_ros/robots/welding_torch/: assets.xml  torch_urdf.xml
dm_task_manager/: package.xml  setup.cfg  setup.py
dm_task_manager/dm_task_manager/: joint_move_client.py  multi_pose_task_client.py  multi_pose_task_client_waypoints.py  task_move_client (사본).py  task_move_client.py
dm_tutorial/: MUJOCO_LOG.TXT  empty_env.xml  joint_example.py  joint_example.xml  joint_example_w_collision.py  joint_example_w_collision.xml  robot.xml  simulate.py  two_box_full.xml  welding_simulate.py
