<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dm_controller</name>
  <version>0.0.0</version>
  <description>Dyros Mujoco Controller</description>
  <maintainer email="lhs4138@snu.ac.kr">Haeseong Lee</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  
  <build_depend>Eigen3</build_depend>
  <build_depend>pybind11</build_depend>
  
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>pybind11</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
