<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dm_ros</name>
  <version>0.0.0</version>
  <description>Mujoco with Dyros Mujoco Controller</description>
  <maintainer email="lhs4138@snu.ac.kr">Haeseong Lee</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>mujoco_py</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
